Tring to fix background on ios

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11,6 +11,7 @@ body
   max-height: 100%;
   width: 100%;
   background-size: cover;
+  background-attachment: fixed;
   z-index: -3;
 }
 
